cli: add launch command